manifests/video-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-processor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: video-processor
  template:
    metadata:
      labels:
        app: video-processor
    spec:
      containers:
        - name: video-processor
          image: nyanzey/detect:latest
          ports:
            - containerPort: 5001
