manifests/router-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-router-service
spec:
  type: NodePort
  selector:
    app: flask-router
  ports:
    - port: 5005
      targetPort: 5005
      nodePort: 30005
