manifests/video-service.yml
apiVersion: v1
kind: Service
metadata:
  name: processor-service
spec:
  selector:
    app: video-processor
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
