manifests/webui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webui-service
spec:
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
      nodePort: 30001   # <-- Custom node port
  type: NodePort
